# yt-playlist-ticktick-sync

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  wrangler.toml
.github/workflows/: deploy.yml
src/: entry.py
